--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ body {
 Mezim benim senin gibi biri bu dünyaya bir kere gelir ve ben o bir kere gelen mucizeye rastladım en güzel haliyle. İyi ki varsın, iyiiii kiiii doğmuşsuuuuunnnnnn. Hayatımda olduğun için ne kadar şanslı olduğumu anlatmaya kelimeler yetmez. Bugün, tüm dileklerin gerçek olsuuunnnn. Ama unutma ben zaten her günümde seni dileyenimm vee en büyük dileğim de hep seninle kalmak nice yaşlara nice sarılmalara hep birlikte hep yan yanaa 
 Doğum günün kutlu olsuuunnnnnnn birtanem benimmmm iyi ki varsııınnnn iyi kiii benimsiiinnnnn❤️❤️Seni çooooook amaaa çoooookkkkkk seviyoruuuuuuuuum❤️❤️❤️😘😘😘</p>
         <div class="gallery">
-            <img src="img1.jpeg">
-            <img src="img2.jpeg">
-            <img src="img3.jpeg">
+            <img src="img1.jpeg" alt="image1">
+            <img src="img2.jpeg" alt="image2">
+            <img src="img3.jpeg" alt="image3">
         </div>
     </div>
 </body>
